--- a/Dearly/package.json
+++ b/Dearly/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.79.0",
+    "date-fns": "^4.1.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
