--- a/Dearly/vercel.json
+++ b/Dearly/vercel.json
@@ -1,5 +1,11 @@
 {
   "framework": "nextjs",
-  "regions": ["iad1"]
+  "regions": ["iad1"],
+  "crons": [
+    {
+      "path": "/api/cron/send-reminders",
+      "schedule": "0 14 * * *"
+    }
+  ]
 }
 
